# docker-printer

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  README  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs.yml  test_examples.yml
docker_printer/: __init__.py  __main__.py  cli.py  models.py  utils.py
docker_printer/resources/templates/: base.Dockerfile.jinja2  stage.Dockerfile.jinja2
docs/: builds.md  conf.py  index.md  modules.md  synth.md  targets.md  templates.md
examples/fastapi_app/: Dockerfile.synth  docker-bake.default.json  requirements.txt
examples/fastapi_app/docker-printer/: .gitignore  builds.yml  targets.yml
examples/fastapi_app/docker-printer/modules/: app-code.yml  app-deps.yml  base.yml
examples/fastapi_app/docker-printer/templates/: pip-install.Dockerfile.jinja2
