[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docker-printer"
readme = "README.md"
authors = [{name = "Rearc Data", email = "data@rearc.io"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/rearc-data/docker-printer"
