[metadata]
version = 0.1.1
name = docker-printer
description = Composer for dockerfiles
author = Rearc Data
author_email = data@rearc.io

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rearc-data/docker-printer

project_urls =
    Bug Tracker = https://github.com/rearc-data/docker-printer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    docker-printer = docker_printer.__main__:main

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml
    jinja2
    click

[options.packages.find]
where = .

[tool:pytest]
addopts = --cov=docker-printer --cov-report term-missing --cov-report html
